# vulnerabilities-api

./: .env.example  .tool-versions  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  dtrack.json
.github/: dependabot.yml
.github/workflows/: main.yml
dependencytrack/: Cargo.toml  README.md
dependencytrack/.openapi-generator/: FILES
dependencytrack/docs/: About.md  AclApi.md  AclMappingRequest.md  AffectedComponent.md  AffectedVersionAttribution.md  Analysis.md  AnalysisApi.md  AnalysisComment.md  AnalysisRequest.md  ApiKey.md  BadgeApi.md  BomApi.md  BomSubmitRequest.md  BomUploadResponse.md  CalculatorApi.md  CloneProjectRequest.md  Component.md  ComponentApi.md  ComponentProperty.md  ComponentPropertyApi.md  ConfigProperty.md  ConfigPropertyApi.md  Cwe.md  CweApi.md  DataClassification.md  DependencyGraphApi.md  DependencyGraphResponse.md  DependencyMetrics.md  EventApi.md  ExternalReference.md  Finding.md  FindingApi.md  FindingAttribution.md  Framework.md  GroupedFinding.md  IdentifiableObject.md  IntegrationApi.md  InvalidBomProblemDetails.md  IsTokenBeingProcessedResponse.md  LdapApi.md  (+61 more)
dependencytrack/src/apis/: acl_api.rs  analysis_api.rs  badge_api.rs  bom_api.rs  calculator_api.rs  component_api.rs  component_property_api.rs  config_property_api.rs  configuration.rs  cwe_api.rs  dependency_graph_api.rs  event_api.rs  finding_api.rs  integration_api.rs  ldap_api.rs  license_api.rs  license_group_api.rs  metrics_api.rs  mod.rs  notification_api.rs  oidc_api.rs  permission_api.rs  policy_api.rs  policy_condition_api.rs  project_api.rs  project_property_api.rs  repository_api.rs  search_api.rs  service_api.rs  tag_api.rs  team_api.rs  user_api.rs  version_api.rs  vex_api.rs  violation_api.rs  violationanalysis_api.rs  vulnerability_api.rs
dependencytrack/src/models/: about.rs  acl_mapping_request.rs  affected_component.rs  affected_version_attribution.rs  analysis.rs  analysis_comment.rs  analysis_request.rs  api_key.rs  bom_submit_request.rs  bom_upload_response.rs  cwe.rs  (+56 more)
proto/helloworld/: helloworld.proto
proto/vulnerabilities/: vulnerabilities.proto
src/: client.rs  dependencytrack.rs  main.rs  server.rs  workload.rs
src/proto/: helloworld.rs  vulnerabilities.rs
