[package]
name = "vulnerabilities"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "rt"] }
tonic-reflection = "0.12.3"
futures = "0.3.31"
progenitor = "0.8.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
syn = "2.0.90"
dependencytrack = { path = "./dependencytrack"}

[build-dependencies]
tonic-build = "0.12.3"
progenitor = "0.8.0"
serde_json = "1.0.133"
syn = "2.0.90"
prettyplease = "0.2.25"
