[package]
name = "vulnerabilities"
version = "0.0.1"
edition = "2021"

[[bin]] # Bin to run the Vulnerabilities gRPC server
name = "vulnerabilities-api-server"
path = "src/main.rs"

[[bin]] # Bin to run the Vulnerabilities gRPC client
name = "vulnerabilities-api-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "rt"] }
tonic-reflection = "0.12.3"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
syn = "2.0.90"
dependencytrack = { path = "./dependencytrack" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6.2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.12.3"
progenitor = "0.9.1"
serde_json = "1.0.137"
syn = "2.0.90"
prettyplease = "0.2.27"
